--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser": "^17.0.4",
     "@angular/platform-browser-dynamic": "^17.0.4",
     "@angular/router": "^17.0.4",
-    "@ngrx/effects": "^17.0.0",
+    "@ngrx/effects": "^17.0.1",
     "@ngrx/store": "^17.0.0",
     "@ngrx/store-devtools": "^17.0.0",
+    "@types/lodash": "^4.14.202",
     "@types/uuid": "^9.0.7",
+    "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
