--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --configuration=development",
     "build": "ng build --output-path docs --base-href division-build-templates",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -15,14 +15,15 @@
     "@angular/common": "^17.0.4",
     "@angular/compiler": "^17.0.4",
     "@angular/core": "^17.0.4",
+    "@angular/fire": "^17.0.0",
     "@angular/forms": "^17.0.4",
     "@angular/material": "^17.0.1",
     "@angular/platform-browser": "^17.0.4",
     "@angular/platform-browser-dynamic": "^17.0.4",
     "@angular/router": "^17.0.4",
+    "@ngrx/effects": "^17.0.1",
     "@ngrx/store": "^17.0.1",
     "@ngrx/store-devtools": "^17.0.1",
-    "@ngrx/effects": "^17.0.1",
     "@types/lodash": "^4.14.202",
     "@types/uuid": "^9.0.7",
     "lodash": "^4.17.21",
