--- a/package.json
+++ b/package.json
@@ -40,12 +40,15 @@
     "@types/jasmine": "~5.1.4",
     "@types/papaparse": "^5.3.13",
     "angular-cli-ghpages": "^1.0.7",
+    "autoprefixer": "^10.4.16",
     "jasmine-core": "~5.1.1",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2"
   }
 }
